// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListGroupItem /> renders properly with default props provided 1`] = `
<li
  className="group-item clickable "
  key="1"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="menuitem"
  tabIndex={2}
>
  test item
</li>
`;

exports[`<ListGroupItem /> renders within active class if current item is selected item 1`] = `
<li
  className="group-item clickable group-item--active"
  key="1"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="menuitem"
  tabIndex={2}
>
  test item
</li>
`;
